--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
             <form id="emailForm">
                 <div class="form-group">
                     <label for="senderEmail">Your Email:</label>
-                    <input type="email" id="senderEmail" name="senderEmail" required 
+                    <input type="email" id="senderEmail" name="senderEmail" 
                            placeholder="your.name@vidpace.com">
                 </div>
 
                 <div class="form-group">
                     <label for="senderPassword">Your Email Password:</label>
-                    <input type="password" id="senderPassword" name="senderPassword" required 
+                    <input type="password" id="senderPassword" name="senderPassword" 
                            placeholder="Your email password">
                 </div>
 
                 <div class="form-group">
                     <label for="recipientEmail">Recipient Email:</label>
-                    <input type="email" id="recipientEmail" name="recipientEmail" required 
+                    <input type="email" id="recipientEmail" name="recipientEmail" 
                            placeholder="prospect@company.com">
                 </div>
 
                 <div class="form-group">
                     <label for="recipientName">Recipient Name:</label>
-                    <input type="text" id="recipientName" name="recipientName" required 
+                    <input type="text" id="recipientName" name="recipientName" 
                            placeholder="John Doe">
                 </div>
 
                 <div class="form-group">
                     <label for="subject">Email Subject:</label>
-                    <input type="text" id="subject" name="subject" required 
+                    <input type="text" id="subject" name="subject" 
                            placeholder="Partnership Opportunity with Vidpace">
                 </div>
 
                 <div class="form-group">
                     <label for="customMessage">Your Message:</label>
-                    <textarea id="customMessage" name="customMessage" rows="4" required
+                    <textarea id="customMessage" name="customMessage" rows="4"
                               placeholder="Enter your personalized message here...">I hope this email finds you well. I wanted to reach out to discuss potential collaboration opportunities between our companies.</textarea>
                 </div>
 
@@ -69,6 +69,6 @@
         <div id="statusMessage" class="status-message"></div>
     </div>
 
-    <script src="script_fixed.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
